--- a/index.html
+++ b/index.html
@@ -10,19 +10,61 @@
     <section class="container">
       <div class="each">
         <div class="Module__heading">
-          <h1 class="Module__no">Module 2 :</h1>
-          <h3 class="Module__Name">Your Guide to Trailhead</h3>
+          <h1 class="Module__no">Module 4 :</h1>
+          <h3 class="Module__Name">Trailhead Playground Management</h3>
         </div>
 
         <div class="sub-each">
           <h4 class="sub__heading">
-            A) Install Apps and Packages in Your Trailhead Playground
+            C) Install Apps and Packages in Your Trailhead Playground
           </h4>
           <div class="content">
             <iframe
               width="560"
               height="315"
-              src="https://www.youtube.com/embed/_6yYVWZKmfI?si=6FKJx77Wv9g8NQAr"
+              src="https://www.youtube.com/embed/rYEfPfXkMdk?si=meGpni95UxXr_nhS"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </div>
+      <div class="each">
+        <div class="Module__heading">
+          <h1 class="Module__no">Module 7 :</h1>
+          <h3 class="Module__Name">Quick Start: Build a Salesforce App</h3>
+        </div>
+
+        <div class="sub-each">
+          <h4 class="sub__heading"></h4>
+          <div class="content">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/QYo2IyPO4UM?si=hFhS2xucs8UH4Jyq"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </div>
+      </div>
+      <div class="each">
+        <div class="Module__heading">
+          <h1 class="Module__no">Module 8 :</h1>
+          <h3 class="Module__Name">Quick Start: Lightning App Builder</h3>
+        </div>
+
+        <div class="sub-each">
+          <h4 class="sub__heading"></h4>
+          <div class="content">
+            <iframe
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/mGWCMj7ekXs?si=tFvOWiz0pWcWxazx"
               title="YouTube video player"
               frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
